# coco-usb

./: .gitignore  CMakeLists.txt  README.md  ccreate.py  cinstall.py  conanfile.py
coco/: CMakeLists.txt  Stream.cpp  Stream.hpp  UsbDevice.cpp  UsbDevice.hpp  UsbHostDevice.cpp  UsbHostDevice.hpp  usb.hpp
coco/native/coco/platform/: UsbDeviceOut.cpp  UsbDeviceOut.hpp  UsbDevice_cout.cpp  UsbDevice_cout.hpp  UsbHost_Win32.cpp  UsbHost_Win32.hpp  UsbHost_WinUSB.cpp  UsbHost_WinUSB.hpp  UsbHost_native.hpp
coco/nrf52/coco/platform/: UsbDevice_USBD.cpp  UsbDevice_USBD.hpp
coco/stm32/coco/platform/: UsbDevice_USB.cpp  UsbDevice_USB.hpp
test/: CMakeLists.txt  DfuTest.cpp  DfuTestHost.cpp  PowerDeliveryTest.cpp  UsbDeviceTest.cpp  UsbSerialTest.cpp  UsbTest.cpp  UsbTestHost.cpp
test/canable02/: UsbDeviceTest.hpp  UsbTest.hpp
test/native/: DfuTestHost.hpp  UsbDeviceTest.hpp  UsbTest.hpp  UsbTestHost.hpp
test/nrf52dongle/: UsbDeviceTest.hpp  UsbSerialTest.hpp  UsbTest.hpp
test/nucleo-g0b1re/: UsbSerialTest.hpp  UsbTest.hpp
test/nucleo-g431rb/: DfuTest.hpp  UsbSerialTest.hpp
test/nucleo-g491re/: UsbTest.hpp
test/nucleo-h503rb/: UsbSerialTest.hpp
test/nucleo-u385rg-q/: UsbSerialTest.hpp
test/stm32g431nucleo/: UsbDeviceTest.hpp  UsbSerialTest.hpp
